<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/editTextAthleteName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthleteName" />

    <EditText
        android:id="@+id/editTextSportName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthleteSport" />

    <EditText
        android:id="@+id/editTextCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthleteCountry" />

    <EditText
        android:id="@+id/editTextBestPerformance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthletePerformance" />

    <EditText
        android:id="@+id/editTextMedal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthleteMedal" />

    <EditText
        android:id="@+id/editTextFacts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/editTextHintAthleteFacts"/>

</LinearLayout>